# qwen-math-rl-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
configs/deepscaler/: eval.yaml  teacher_sft_demo.yaml  teacher_sft_experiment.yaml
configs/eval/: base_eval.yaml  rl_eval.yaml  sft_eval.yaml
configs/global/: logging.yaml  model.yaml  paths.yaml
configs/sft/: demo.yaml  experiment_001.yaml
docs/: backends.md  deepscaler_distillation.md  demo_experiment.md  eval.md  process.md  rl.md  sft.md
scripts/datasets/rl/: download_dapo_math.sh  prepare_dapo_demo.sh  prepare_dapo_experiment.sh
scripts/datasets/sft/: download_ultradata.sh  prepare_ultradata_demo.sh  prepare_ultradata_demo_streaming.sh  prepare_ultradata_experiment.sh  prepare_ultradata_experiment_streaming.sh
scripts/deepscaler/: README.md  run_demo_sft_from_teacher.sh
scripts/deepscaler/datasets/: check_teacher_tmux_shards.sh  download_benchmarks.sh  download_train_dataset.sh  filter_correct_teacher_sft_demo.sh  filter_correct_teacher_sft_experiment.sh  generate_teacher_sft_demo.sh  generate_teacher_sft_experiment.sh  generate_teacher_sft_vllm_1k.sh  (+8 more)
scripts/eval/: compare_prompt.sh
scripts/models/: download_base_model.sh  generate_once.sh  list_models.sh  verify_base_model.sh
scripts/reports/: compare_checkpoints.sh  make_report.sh
scripts/setup/: check_gpu.sh  create_env.sh  install_deps.sh  select_gpu.sh
src/qwen_sft_rlvr/: __init__.py
tests/: test_configs.py  test_deepscaler_reward.py  test_formatting.py  test_parser.py  test_paths.py  test_rewards.py  test_rl_dataset.py
(+117 files in other folders)
